# tinnitus-cms-tauri

./: .eslintignore  .eslintrc.js  .gitignore  README.md  electron-builder.json5  index.html  package-lock.json  package.json  paths.json  tsconfig.json  types.d.ts  vite.config.ts
resources/: icon.icns
scripts/: watch.mjs
src/: app.sass  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/oci/: albums.rs  mod.rs  object.rs  object_storage.rs  provider.rs
src-tauri/src/utils/: http.rs  http_utils.rs
src/components/albumform/: _albumform.sass  albumform.tsx
src/components/albuminfo/: __albuminfo.sass  albuminfo.tsx
src/components/artwork/: _artwork.sass  artwork.tsx
src/components/dropdown/: _dropdown.sass  dropdown.tsx
src/components/messagebox/: _messagebox.sass  messagebox.tsx
src/components/modal-search/: modal-search.css
src/components/mostratedview/: _mostratedview.sass  mostratedview.tsx
src/components/player/: _player.sass  player.tsx
src/components/presetform/: _presetform.sass  presetform.tsx
src/components/presetinfo/: _presetinfo.sass  presetinfo.tsx
src/config/: firebase.ts  oci.ts
src/hooks/: use-window-dimensions.ts
src/pages/home/: _home.sass  (+1 more)
src/router/: router.tsx  routes.ts
src/services/: album-services.ts  general-services.ts  preset-services.ts  sample-services.ts
src/store/: index.ts
src/styles/: _media.sass  colors.sass  custom.sass  index.sass  styles.ts
src/types/: album.ts  general.ts  preset.ts  sample.ts
src/utils/: errorhandler.ts  helpers.ts  icons.ts  info.ts
(+53 files in other folders)
