[package]
name = "tinnitus-cms"
version = "0.1.0"
description = "Content Management System application for Tinnitus Sounds"
authors = ["TincuS"]
license = ""
repository = ""
default-run = "tinnitus-cms"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.7", features = ["api-all"] }
pem = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = " 0.13.0"
chrono = "0.4"
reqwest = "0.11.10"
httpdate = "1.0.2"
sha2 = "0.10.2"
microkv = "0.2.8"
ring = "0.16.20"
async-trait = "0.1.53"
substring = "1.4.5"
lazy_static = "1.4.0"
hound = "3.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
